hphp/test/slow/class_type_constant/recursion_return_type.php.expectf
Catchable fatal error: Value returned from function f() must be of type D<C::A>, D<int> given in %s/recursion_return_type.php on line 15
